--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>This is a Header</h1>
     <p>This is a paragraph</p>
     <p>Second paragraph</p>
+    <p>Third paragraph</p>
 </body>
 </html>
